--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,7 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-test.db
+turnik-bot
+*.db
+docker-compose.override.yml
+var
